coreapi-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreapi
  namespace: api
  creationTimestamp: null
  labels:
     app: coreapi
spec:
  ports:
   - name: "80"
     port: 80
     targetPort: coreapi
     protocol: TCP
   - name: "443"
     port: 443
     targetPort: coreapi
     protocol: TCP
  selector:
     app: coreapi
#  type: LoadBalancer
#  loadBalancerSourceRanges:
#  - 10.0.0.0/8
#  - 210.18.155.162/32
#  - 106.51.127.105/32
#  - 157.51.126.119/32
#  - 157.51.110.132/32
#  - 157.51.161.77/32
#  - 157.51.182.215/32
#  - 157.51.169.249/32
#  - 27.4.117.216/32
#  - 49.207.131.221/32
#  - 183.83.155.246/32
#  - 49.207.130.132/32
#  - 157.51.97.111/32
#  - 106.200.46.236/32
#  - 49.207.137.243/32
#  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapi
  namespace: api
spec:
  selector:
    matchLabels:
      app: coreapi
  strategy: 
#    type: Recreate
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: coreapi
    spec:
      containers:
      - name: coreapi
        image: gcr.io/beldex-exchange-289008/coreapicicd:latest
        ports:
          - containerPort: 3000
            name: coreapi
            protocol: TCP
        livenessProbe:
           tcpSocket:
             port: 3000
           initialDelaySeconds: 30
           periodSeconds: 30 
        readinessProbe:
           tcpSocket:
             port: 3000
           initialDelaySeconds: 15
           periodSeconds: 3
        resources:
          requests:
            cpu: 700m
            memory: 1Gi
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coreapi-ingress
  namespace: api
  annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Info"
     nginx.ingress.kubernetes.io/enable-cors: "True"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "True"
     nginx.ingress.kubernetes.io/cors-allow-origin: "https://www.beldex.io"
     ingress.kubernetes.io/whitelist-source-range: 173.245.48.0/20
     ingress.kubernetes.io/whitelist-source-range: 103.21.244.0/22
     ingress.kubernetes.io/whitelist-source-range: 103.22.200.0/22
     ingress.kubernetes.io/whitelist-source-range: 103.31.4.0/22
     ingress.kubernetes.io/whitelist-source-range: 141.101.64.0/18
     ingress.kubernetes.io/whitelist-source-range: 108.162.192.0/18
     ingress.kubernetes.io/whitelist-source-range: 190.93.240.0/20
     ingress.kubernetes.io/whitelist-source-range: 188.114.96.0/20
     ingress.kubernetes.io/whitelist-source-range: 197.234.240.0/22
     ingress.kubernetes.io/whitelist-source-range: 198.41.128.0/17
     ingress.kubernetes.io/whitelist-source-range: 162.158.0.0/15
     ingress.kubernetes.io/whitelist-source-range: 104.16.0.0/12
     ingress.kubernetes.io/whitelist-source-range: 172.64.0.0/13
     ingress.kubernetes.io/whitelist-source-range: 131.0.72.0/22
#     nginx.ingress.kubernetes.io/limit-connections: "10"
#     nginx.ingress.kubernetes.io/limit-rps: "60"
#     ingress.kubernetes.io/affinity: "cookie"
#     kubernetes.io/ingress.allow-http: "True"
#     nginx.ingress.kubernetes.io/enable-modsecurity: "True"
#     nginx.ingress.kubernetes.io/enable-owasp-modsecurity-crs: "True"
#     nginx.org/hsts: "False"
#     nginx.org/hsts-max-age: "2592000"
#     nginx.org/hsts-include-subdomains: "False"
#     nginx.org/hsts-behind-proxy: "False"
#     ingress.kubernetes.io/ssl-redirect: "True"
#     nginx.ingress.kubernetes.io/modsecurity-snippet: |
#       SecRuleEngine On
#       SecRequestBodyAccess On
#       SecAuditEngine RelevantOnly
#       SecAuditLogParts ABIJDEFHZ
#       SecAuditLog /var/log/modsec_audit.log
     nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_origin ~* (^https?://([^/]+\.)(www.beldex.io))) {
          set $cors "true";
      }
      if ($request_method = 'OPTIONS') {
          set $cors "${cors}options";
      }
      if ($request_method = 'GET') {
          set $cors "${cors}get";
      }
      if ($request_method = 'POST') {
          set $cors "${cors}post";
      }

      if ($request_method = 'PATCH') {
          set $cors "${cors}patch";
      }

      if ($request_method = 'DELETE') {
          set $cors "${cors}delete";
      }

      if ($cors = "true") {
          add_header 'Access-Control-Allow-Origin' "$http_origin" ;
      }

      if ($cors = "trueget") {
          add_header 'Access-Control-Allow-Origin' "$http_origin";
          add_header 'Access-Control-Allow-Credentials' 'true';
          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PATCH, DELETE';
          add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Info';
      }

      if ($cors = "trueoptions") {
          add_header 'Access-Control-Allow-Origin' "$http_origin";
          add_header 'Access-Control-Allow-Credentials' 'true';
          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PATCH, DELETE';
          add_header 'Access-Control-Allow-Headers' 'Info,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
          add_header 'Access-Control-Max-Age' 1728000;
          add_header 'Content-Type' 'text/plain charset=UTF-8';
          add_header 'Content-Length' 0;
          return 204;
      }

      if ($cors = "truepost") {
          add_header 'Access-Control-Allow-Origin' "$http_origin";
          add_header 'Access-Control-Allow-Credentials' 'true';
          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PATCH, DELETE';
          add_header 'Access-Control-Allow-Headers' 'Info,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
      }

      if ($cors = "truepatch") {
          add_header 'Access-Control-Allow-Origin' "$http_origin";
          add_header 'Access-Control-Allow-Credentials' 'true';
          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PATCH, DELETE';
          add_header 'Access-Control-Allow-Headers' 'Info,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
      }

      if ($cors = "truedelete") {
          add_header 'Access-Control-Allow-Origin' "$http_origin";
          add_header 'Access-Control-Allow-Credentials' 'true';
          add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PATCH, DELETE';
          add_header 'Access-Control-Allow-Headers' 'Info,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
      }

spec:
  rules:
  - host: coreapi.beldex.io
    http:
      paths:
      - path: /
        backend:
          serviceName: coreapi
          servicePort: 80
  tls:
  - secretName: sturdynewlat
    hosts:
    - coreapi.beldex.io
